--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sadaimudinaadhar/tinyurl",
+    "name": "yuukooagency/tinyurl",
     "description": "A simple package for creating tiny urls.",
     "type": "library",
     "require": { 
